# arkanoid-like

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TASK_CONDITIONS.md
include/: ArgParse.h  Brick.h  Effect.h  Entity.h  EntityConstants.h  Game.h  GameState.h  Map.h  SpriteLoader.h
src/: ArgParse.cpp  Brick.cpp  Effect.cpp  Entity.cpp  Game.cpp  GameState.cpp  Map.cpp  SpriteLoader.cpp  arkanoid-like.cpp  arkanoidlike.cpp  game.cpp
